--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-header></app-header>
-<app-menu></app-menu>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
-<app-settings></app-settings>
+<router-outlet>
+</router-outlet>
